# pyrational

./: .gitignore  CMakeLists.txt  Dockerfile  builld_wheels.sh  readme.md  setup.py  tox.ini
include/: generators.h  rational.h
src/: generators.cpp  python_module.cpp  rational.cpp
tests/cpp/: CMakeLists.txt  test_rational.cpp
tests/python/: test_rationals.py
